// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCheckProjectDeclarationFromDirectory should define correctly for a bad practice 1`] = `
CheckProjectDeclaration {
  "checks": Array [
    CheckFileDeclaration {
      "check": [Function],
      "fix": null,
      "path": "package.json",
      "required": true,
      "type": "CUSTOM",
    },
  ],
  "name": "moment",
  "readme": "using \`moment\` is a bad practice because it has a weird api that \\"mutates\\" values

for example:
\`\`\`ts
const a = moment();
const b = a.addHours(7);
expect(b.toISOString()).not.toEqual(a.toISOString()); // this will fail, since moment actually both returns \`b\` _and_ mutates \`a\`...
\`\`\`

",
}
`;

exports[`getCheckProjectDeclarationFromDirectory should define correctly when many files in many levels 1`] = `
CheckProjectDeclaration {
  "checks": Array [
    CheckFileDeclaration {
      "check": [Function],
      "fix": null,
      "path": ".gitignore",
      "required": true,
      "type": "CONTAINS",
    },
    CheckFileDeclaration {
      "check": [Function],
      "fix": [Function],
      "path": ".terraform-version",
      "required": true,
      "type": "EQUALS",
    },
    CheckFileDeclaration {
      "check": [Function],
      "fix": null,
      "path": "provision/terraform/environments/dev/main.tf",
      "required": true,
      "type": "CONTAINS",
    },
    CheckFileDeclaration {
      "check": [Function],
      "fix": [Function],
      "path": "provision/terraform/environments/dev/versions.tf",
      "required": true,
      "type": "EQUALS",
    },
    CheckFileDeclaration {
      "check": [Function],
      "fix": null,
      "path": "provision/terraform/environments/prod/main.tf",
      "required": true,
      "type": "CONTAINS",
    },
    CheckFileDeclaration {
      "check": [Function],
      "fix": [Function],
      "path": "provision/terraform/environments/prod/versions.tf",
      "required": true,
      "type": "EQUALS",
    },
    CheckFileDeclaration {
      "check": [Function],
      "fix": [Function],
      "path": "provision/terraform/product/variables.tf",
      "required": true,
      "type": "EQUALS",
    },
  ],
  "name": "terraform",
  "readme": "best pattern found for terraform so far is to put different environments into their own directory - and just have them reference a shared product dir
",
}
`;

exports[`getCheckProjectDeclarationFromDirectory should define correctly when only one root level file check and a readme 1`] = `
CheckProjectDeclaration {
  "checks": Array [
    CheckFileDeclaration {
      "check": [Function],
      "fix": null,
      "path": "package.json",
      "required": true,
      "type": "CUSTOM",
    },
  ],
  "name": "dates-and-times",
  "readme": "\`date-fns\` is a great library for manipulating dates and times in a functional, immutable, declarative pattern
",
}
`;
